2005-03-03  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/noat-1.d: Add -mips1 to assembler options.

2005-03-03  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	* gas/arc/ld.s:Add checks for short immediates with ld
	* gas/arc/ld.d:Likewise. 

2005-03-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* gas/mips/tls-o32.d, gas/mips/tls-o32.s, gas/mips/tls-ill.l,
	gas/mips/tls-ill.s: New files.
	* gas/mips/mips.exp: Run TLS tests.

2005-03-02  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/astest.d: Adjust for relocs reduced to section sym.
	* gas/ppc/astest2.d: Likewise.
	* gas/ppc/astest2_64.d: Likewise.
	* ppc/astest64.d: Likewise.
	* ppc/booke.d: Likewise.
	* ppc/power4.d: Likewise.
	* ppc/test1elf32.d: Likewise.
	* ppc/test1elf64.d: Likewise.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/cr-err.[ls]: New.
	* gas/i386/crx.[ds]: New.
	* gas/i386/i386.exp: Run new tests.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intelok.d: Add -r to objdump options. Adjust expectations.
	* gas/i386/intelok.s: Add checks for various special memory operands.

2005-03-01  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	* gas/arc/extensions.s: New file.
	* gas/arc/extensions.d: New file.

2005-03-01  Nick Clifton  <nickc@redhat.com>

	* gas/arm/arm.exp (undefined): Run a COFF variant of this test for
	COFF based ports.
	* gas/arm/undefined_coff.s: New file: Variant of undefined.s but
	with a COFF formated local label name.
	* gas/arm/undefined_coff.l: New file.  Variant of undefined.l.

2005-03-01  Stig Petter Olsroed  <stigpo@users.sourceforge.net>
	    Nick Clifton  <nickc@redhat.com>

	* gas/arm/inst.d: Allow for ARM ports which decode the reloc
	associated with branches and so show the exact symbolic
	destination address rather than an offset from the start of the
	section.
	* gas/arm/pic.d: Likewise.

>>>>>>> 1.791
2005-03-01  Alan Modra  <amodra@bigpond.net.au>

	* gas/m68k/mcf-emac.d: Allow for 64-bit addresses.